# GcodeParser

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: sample.nc
gparser/: __init__.py  gparser.py
