[tool.poetry]
name = "gparser"
version = "0.1.0"
description = "Parsing Gcode"
authors = ["atomon <38009289+atomon@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
